package inveox.exportservice.infrastructure.inbound.dlo.dto;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import lombok.ToString;

@Data
@NoArgsConstructor
@AllArgsConstructor
@ToString(callSuper = true)
public class SamplesDto {
    
    BodyPartDto bodyPart;

    int count;

}
